Load Conversion based on userId